<resources>
    <string name="app_name">Incoming</string>

    <string name="action_settings">Einstellungen</string>
    <string name="action_search">Suchen</string>
    <string name="action_info">About</string>

    <string name="title">Titel</string>
    <string name="date">Datum</string>
    <string name="description">Beschreibung</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_events">Events</string>
    <string name="time">Zeit</string>
    <string name="contact_person">Kontaktperson</string>
    <string name="category">Kategorie</string>

    <string name="fhws">FHWS</string>
    <string name="uni">UNI</string>
    <string name="isc">ISC</string>
    <string name="holiday">Feiertage</string>

    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="consultationHour">Sprechstunde</string>
    <string name="office">Büro</string>
    <string name="zipCode">PLZ</string>
    <string name="homepage">Homepage</string>
    <string name="room">Zimmer</string>
    <string name="city">Stadt</string>

    <string name="noSignal">Kein Signal</string>
    <string name="noInternetConection">Keine Internetverbindung!</string>
    <string name="noEvents">Im Moment sind keine Events verfügbar!</string>
    <string name="noNews">Im Moment sind keine News verfügbar!</string>
    <string name="noLinks">Im Moment sind keine Links verfügbar!</string>

    <string name="libary">Bibliotheken</string>
    <string name="eatDrink">Essen-Trinken</string>
    <string name="dormitory">Wohnheime</string>
    <string name="fhws_building">FHWS Gebäude</string>

    <string name="noGPS">GPS deaktiviert.\nMöchten Sie GPS jetzt aktivieren?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="opening_hours">Öffnungszeiten:</string>

    <string name="aboutText">Incoming App</string>
</resources>
