<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fhws.marcelgross.incoming.EventsActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/event_cv"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="5dp"
        card_view:contentPadding="10dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/event_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:text="@string/title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/event_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/event_title_tv"
                android:text="@string/date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:id="@+id/event_time_tv"
                android:layout_alignTop="@+id/event_date_tv"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_person"
                android:id="@+id/event_contactperson_tv"
                android:layout_below="@+id/event_date_tv"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:id="@+id/event_category_tv"
                android:layout_below="@+id/event_time_tv"
                android:layout_alignParentStart="false"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp" />

            <TextView
                android:id="@+id/event_description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/event_contactperson_tv"
                android:text="@string/description" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_calendar_btn"
        android:background="@drawable/fab"
        android:id="@+id/calendar_ib"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/event_cv"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />
</RelativeLayout>
