<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:gravity="right">


    <android.support.v7.widget.CardView
        android:id="@+id/contact_cv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="5dp"
        card_view:contentPadding="10dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/profile_pic"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:src="@mipmap/pic_placeholder"
                    android:baselineAlignBottom="false" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:id="@+id/contactCard_name_tv"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ff000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:id="@+id/contactCard_status_tv" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/consultationHour"
                        android:id="@+id/textView"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/consultationHour"
                        android:id="@+id/contactCard_consultationHour_tv" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room"
                    android:id="@+id/contactCard_room_tv" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/office"
                    android:id="@+id/contactCard_office_tv"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zipCode"
                        android:id="@+id/contactCard_zipCode_tv"
                        android:layout_marginRight="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:id="@+id/contactCard_city_tv" />
                </LinearLayout>

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/homepage"
                        android:id="@+id/contactCard_homepage_tv"
                        style="@style/Hyperlink"
                        android:layout_gravity="center_vertical"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="false"
                        android:layout_centerVertical="true" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true">

                        <ImageButton
                            android:background="@drawable/fab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/contactCard_homepage_btn"
                            android:src="@mipmap/ic_homepage"
                            android:layout_marginRight="10dp" />

                        <ImageButton
                            android:background="@drawable/fab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/contactCard_call_btn"
                            android:src="@mipmap/ic_call"
                            android:layout_marginRight="10dp" />

                        <ImageButton
                            android:background="@drawable/fab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/contactCard_mail_btn"
                            android:src="@mipmap/ic_mail" />
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>